# src/main/resources/static/openapi.yaml
@@ -7,40 +7,49 @@ servers:
   description: Generated server url
 tags:
 - name: Students
-  description: Students API endpoint
+  description: Product Movement Microservice API endpoint
 paths:
-  /api/students:
+  /api/arriving:
     get:
       tags:
-      - Students
-      summary: Get all students
-      description: Gets all students by page
-      operationId: getAllStudents
-      parameters:
-      - name: pageable
-        in: query
-        required: true
-        schema:
-          $ref: '#/components/schemas/Pageable'
+      - Products
+      summary: Get all arriving products
+      description: Returns a page of all the products that have arrived
+      operationId: getArrivingProducts
       responses:
         "200":
           description: OK
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/PageStudentResource'
+                $ref: '#/components/schemas/PageProductResource'
 
-  /api/students/{studentId}:
+  /api/exiting:
+    get:
+      tags:
+        - Products
+      summary: Get all exiting products
+      description: Returns a page of all the products that have exited
+      operationId: getArrivingProducts
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/PageProductResource'
+
+  /api/products/{productId}:
     get:
       tags:
         - Students
-      summary: Get a student by their Id.
-      description: Returns a particular student given their Id.
+      summary: Get a product by its Id.
+      description: Returns a particular product given its Id.
       operationId: getStudentById
       parameters:
-        - name: "studentId"
+        - name: "productId"
           in: "path"
-          description: "Id of the student to return"
+          description: "Id of the Product to return"
           required: true
           schema:
             type: "integer"
@@ -51,9 +60,9 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/StudentResource'
+                $ref: '#/components/schemas/ProductResource'
         "404":
-          description: "Student not found with the given Id. Try another Id."
+          description: "Product not found with the given Id. Try another Id."
 
 components:
   schemas:
@@ -84,7 +93,7 @@ components:
           type: boolean
         empty:
           type: boolean
-    PageStudentResource:
+    PageProductResource:
       type: object
       properties:
         totalElements:
@@ -99,7 +108,7 @@ components:
         content:
           type: array
           items:
-            $ref: '#/components/schemas/StudentResource'
+            $ref: '#/components/schemas/ProductResource'
         number:
           type: integer
           format: int32
@@ -116,16 +125,19 @@ components:
           $ref: '#/components/schemas/Pageable'
         empty:
           type: boolean
-    StudentResource:
+    ProductResource:
       type: object
       properties:
         id:
           type: integer
           format: int64
-          example: 1
+          example: 2
         name:
           type: string
-          example: "Pepe"
-        lastName:
+          example: "Doritos Mega Queso"
+        date:
           type: string
-          example: "Martínez"
+          example: "11-04-21"
+        action:
+          type: string
+          example: "SALIDA"
